Added the site.baseurl to navigation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Planet of the Universe</title>
-</head>
-<body>
+---
+layout: default
+---
 
 <h1>Planet of the universe </h1>
 <p>Lots of planet in the universe</p>
 
-</body>
-</html>
